# LysoSense

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  README.md  dev-requirements.txt  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: streamlit_app.py
docs/: USER_GUIDE.md
notebooks/: cps_analyzer.ipynb
src/lysosense/: __init__.py  analysis.py  io.py  transforms.py
tests/: conftest.py  test_analysis.py  test_analysis_math.py  test_golden.py  test_io.py  test_transforms.py
