[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lysosense"
version = "0.1.0"
description = "Differential centrifugal sedimentation analysis toolkit"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.40",
    "pandas>=2.2",
    "numpy>=2.1",
    "plotly>=5.24",
    "scipy>=1.13",
    "openpyxl>=3.1",
    "scipy-stubs==1.17.0.0",
    "pandas-stubs==2.3.3.251219",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["lysosense*"]

